Changes from jTDS 1.0.2
=======================

03/26/2005 - Alin Sinpalean
 o Corrected bug [1170777] resultSet.updateRow() fails if no row has been
   changed. Thanks go to Brett Wooldridge for signalling the bug and providing
   a fix.

03/17/2005 - Alin Sinpalean
 o Implemented RFE [1165119] Computername in Connection-URL: added a WSID
   parameter to the URL properties, to override the host name that is
   determined automatically.
 o Corrected bug [1164219] possible incorrect synchronization in
   BlobImpl.java (removed all synchronizations from BlobImpl and ClobImpl).
 o Added a description of jTDS' support for multi threading to the FAQ.
 o Update for bug [1161601] Connection.close() can take a long time when Sybase
   down. The close timeout has been reduced to 1 second, just to make sure the
   logout request makes it through to the server.

03/14/2005 - Alin Sinpalean
 o Applied Mike's additional fix to bug [1158509] Various problems with
   connect/login timeouts.

03/12/2005 - Mike Hutchinson
 o Small change to ConnectionJDBC2 to ensure that the server character set is
   used if none is specified by the user.
 o TdsCore.closeConnection() has been modified to set a 10 second timeout on
   the socket. This should address bug report [1161601] Connection.close() can
   take a long time when Sybase down.
 o TdsData and TdsCore have been modified to address bug [1161609] Text or
   image data truncated on Sybase 12.5. A new TDS 5 data type (0x24) is used to
   send bulk text or image data to the server.
 o A small bug has been corrected in Support.substituteParameters which caused
   short InputStreams to be written as a binary parameter rather than text when
   running with Sybase 11.

03/12/2005 - Alin Sinpalean
 o Added a fix suggested by rtdog to TimerThread.

03/09/2005 - Alin Sinpalean
 o Corrected bug [1158509] Various problems with connect/login timeouts. The
   last problem fixed was concerned with socket connection not timing out (only